name: Haskeme
version: 0.1.0.0
cabal-version: >=1.8
build-type: Simple
license: MIT
license-file: LICENSE
homepage: http://github.com/arianvp/Haskeme
category: Language
author: Arian van Putten
data-dir: ""
 
executable Haskeme
    build-depends: base ==4.5.*, parsec -any
    main-is: src/Haskeme.hs
    buildable: True
    other-modules:
 
